tests/fixtures/negative/skp1-unsupported-kdf.hex
534b50310101020000100000
0000000000000000000000000000000000000000000000000000000000000000
0000000000000000
000080000000000800000001
